# RuneWay

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
compiler/resources/fluent/: lexer_messages.ftl  parse_messages.ftl
compiler/runec/: Cargo.toml
compiler/runec_abi/: Cargo.toml
compiler/runec_abi/src/: lib.rs
compiler/runec_ast/: Cargo.toml
compiler/runec_ast/src/: ast_type.rs  expression.rs  lib.rs  statement.rs
compiler/runec_builtins/: Cargo.toml
compiler/runec_builtins/src/: lib.rs
compiler/runec_codegen_cranelift/: Cargo.toml
compiler/runec_codegen_cranelift/src/: aot.rs  error.rs  jit.rs  lib.rs  lowering.rs  signature.rs
compiler/runec_codegen_cranelift/src/diagnostics/: messages.rs  mod.rs
compiler/runec_codegen_cranelift/src/emit/: mod.rs
compiler/runec_codegen_cranelift/src/lowering/: mod.rs  native.rs
compiler/runec_errors/: Cargo.toml
compiler/runec_errors/src/: diagnostics.rs  emit.rs  labels.rs  lib.rs  lint.rs  macros.rs  message.rs
compiler/runec_hashes/: Cargo.toml
compiler/runec_hashes/src/: lib.rs
compiler/runec_hir/: Cargo.toml
compiler/runec_hir/src/: expression.rs  item.rs  lib.rs  map.rs  path.rs  resolution.rs  statement.rs  ty.rs
compiler/runec_hir/src/lowering/: messages.rs  mod.rs  tests.rs
compiler/runec_mir/: Cargo.toml
compiler/runec_mir/src/: block.rs  constant.rs  function.rs  ids.rs  lib.rs  lowering.rs  module.rs  operand.rs  ty.rs
compiler/runec_mir/src/lowering/: messages.rs  tests.rs
compiler/runec_parse/: Cargo.toml
compiler/runec_parse/src/: lib.rs  messages.rs
compiler/runec_parse/src/lexer/: cursor.rs  lexer_struct.rs  messages.rs  mod.rs  tests.rs  token.rs
compiler/runec_parse/src/parser/: messages.rs  mod.rs  parser_struct.rs  pratt.rs  result.rs  tests.rs
compiler/runec_proc_macro_utils/: Cargo.toml
compiler/runec_proc_macro_utils/src/: lib.rs
compiler/runec_runtime/: Cargo.toml
compiler/runec_runtime/src/: lib.rs
compiler/runec_semantic/: Cargo.toml
compiler/runec_semantic/src/: lib.rs
compiler/runec_semantic/src/resolving/: mod.rs
compiler/runec_semantic/src/semantic/: mod.rs
compiler/runec_semantic/src/typeck/: mod.rs
compiler/runec_source/: Cargo.toml
compiler/runec_source/src/: byte_pos.rs  lib.rs  source_loader.rs  source_map.rs  span.rs
compiler/runec_test_utils/: Cargo.toml
compiler/runec_test_utils/src/: lib.rs
compiler/runec_utils/: Cargo.toml
compiler/runec_utils/src/: lib.rs
compiler/runec_utils/src/common/: define_messages.rs  growing_vec.rs  message_format.rs  mod.rs  number_length.rs
compiler/runec_utils/src/sync/: freeze.rs  mod.rs
compiler/workspaces/runec/: Cargo.toml
compiler/workspaces/runec_ast/: Cargo.toml
compiler/workspaces/runec_ast/src/: ast_type.rs  expression.rs  lib.rs  operators.rs  statement.rs
compiler/workspaces/runec_errors/: Cargo.toml
compiler/workspaces/runec_errors/src/: diagnostics.rs  emit.rs  labels.rs  lib.rs  macros.rs  message.rs
compiler/workspaces/runec_fluent_messages/: Cargo.toml
compiler/workspaces/runec_fluent_messages/src/: lib.rs
compiler/workspaces/runec_hir/: Cargo.toml
compiler/workspaces/runec_hir/src/: expression.rs  ids.rs  item.rs  lib.rs  ty.rs
compiler/workspaces/runec_hir/src/lowering/: mod.rs  tests.rs
compiler/workspaces/runec_ir/: Cargo.toml
compiler/workspaces/runec_parse/: Cargo.toml
compiler/workspaces/runec_parse/src/: lib.rs
compiler/workspaces/runec_parse/src/lexer/: cursor.rs  lexer_struct.rs  mod.rs  tests.rs  token.rs
compiler/workspaces/runec_parse/src/parser/: mod.rs  parser_struct.rs  pratt.rs  result.rs  tests.rs
compiler/workspaces/runec_source/: Cargo.toml
compiler/workspaces/runec_source/src/: byte_pos.rs  file_loader.rs  source_map.rs  span.rs
compiler/workspaces/runec_test_utils/src/: lib.rs
compiler/workspaces/runec_utils/src/common/: define_messages.rs  growing_vec.rs  hashmap_macro.rs  mod.rs
docs/: examples.md  frontend-pipeline.md  testing.md
example/: build_test.rnw  core_use.rnw  fib.rnw  hello_world.rnw  main.rnw  main.rnway  syntax.example.rnway  typed_add.rnw
src/: main.rs
src/runeway/: ast_structure.rs  errors.rs  lexer.rs  mod.rs  parser.rs
src/runeway/builtins/: mod.rs
src/runeway/builtins/functions/: mod.rs  other.rs  print.rs  types.rs
src/runeway/builtins/types/: boolean.rs  dict.rs  float.rs  integer.rs  iterator.rs  list.rs  mod.rs  null_type.rs  string.rs  tuple.rs  u_integer.rs
src/runeway/compiler/bytecode/: mod.rs
src/runeway/compiler/bytecode/interface/: application.rs  consts.rs  function.rs  mod.rs  module.rs  opcode.rs
src/runeway/compiler/ir/: mod.rs
src/runeway/core/: mod.rs  spanned.rs  symbol_table.rs
src/runeway/core/ast/: expression.rs  mod.rs  operators.rs  statement.rs
src/runeway/core/errors/: color_generator.rs  impls.rs  mod.rs
src/runeway/core/lexer/: mod.rs  process.rs  token.rs
src/runeway/core/parser/: mod.rs  process.rs
src/runeway/core/utils/: assert.rs  mod.rs  serde.rs
src/runeway/executor/: mod.rs
src/runeway/executor/interpreter/: ast_interpreter.rs  mod.rs
src/runeway/executor/runtime/: controlflow.rs  environment.rs
src/runeway/executor/vm/: mod.rs
src/runeway/runtime/: environment.rs  mod.rs
src/runeway/runtime/libraries/: loaded.rs  mod.rs  module_type.rs  stdlib_registry.rs
src/runeway/runtime/types/: base_type.rs  callable_type.rs  mod.rs  native_function.rs  type_type.rs  types_reg.rs  user_defined_class.rs
src/runeway/stdlibs/: mod.rs
src/runeway/stdlibs/buffered/: errors.rs  general.rs  mod.rs
src/runeway/stdlibs/dynbox/: mod.rs  types.rs
src/runeway/stdlibs/http/: errors.rs  general.rs  mod.rs
src/runeway/stdlibs/itertools/: general.rs  mod.rs
src/runeway/stdlibs/json/: errors.rs  general.rs  mod.rs
src/runeway/stdlibs/random/: general.rs  mod.rs  types.rs
src/runeway/utils/: serde.rs
src/runeway_old/: ast_structure.rs  lexer.rs  mod.rs  parser.rs
(+13 files in other folders)
