[package]
name = "runeway"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "runeway"
path = "src/main.rs"

[dependencies]
once_cell = "1.21.3"
ariadne = "0.5.1"
strsim = "0.11.1"
reqwest = { version = "0.12.22", features = [ "blocking", "json" ] }
serde = { version = "1", features = [ "derive" ]}
serde_json = "1"
# rust_decimal = "1.37.2"
