[package]
name = "runeway"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "runeway"
path = "src/main.rs"

[dependencies]
once_cell = "1.21.3"
strsim = "0.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9.2"
rand_pcg = "0.9.0"
codespan-reporting = "0.12.0"
colored = "3"
# rust_decimal = "1.37.2"
