[workspace]
members = [
    "compiler/runec",
    "compiler/runec_utils",
    "compiler/runec_errors",
    "compiler/runec_parse",
    "compiler/runec_source",
    "compiler/runec_ast",
    "compiler/runec_test_utils",
    "compiler/runec_hir",
    "compiler/runec_abi",
    "compiler/runec_builtins",
    "compiler/runec_runtime",
    "compiler/runec_semantic",
    "compiler/runec_mir",
    "compiler/runec_codegen_cranelift",
    "compiler/runec_proc_macro_utils",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Voiris/RuneWay"
homepage = "https://github.com/Voiris/RuneWay"
readme = "README.md"
