[package]
name = "runec_codegen_cranelift"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Voiris/RuneWay"
homepage = "https://github.com/Voiris/RuneWay"

[dependencies]
runec_abi = { path = "../runec_abi" }
runec_builtins = { path = "../runec_builtins" }
runec_mir = { path = "../runec_mir" }
runec_source = { path = "../runec_source" }

[dev-dependencies]
runec_hir = { path = "../runec_hir" }
