[package]
name = "runec_hir"
version = "0.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Voiris/RuneWay"
homepage = "https://github.com/Voiris/RuneWay"

[dependencies]
runec_source = { path = "../runec_source" }
runec_ast    = { path = "../runec_ast" }
runec_errors = { path = "../runec_errors" }
runec_utils  = { path = "../runec_utils" }
runec_builtins = { path = "../runec_builtins" }
