[package]
name = "runec_semantic"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Voiris/RuneWay"
homepage = "https://github.com/Voiris/RuneWay"

[dependencies]
runec_ast    = { path = "../runec_ast" }
runec_builtins = { path = "../runec_builtins" }
runec_hir    = { path = "../runec_hir" }
runec_source = { path = "../runec_source" }
