[package]
name = "runec_errors"
version = "0.0.0"
edition = "2024"

[dependencies]
fluent = { version = "0.17.0" }
once_cell = "1.21.3"
indexmap = "2.12.1"
runec_source = { path = "../runec_source" }
runec_utils = { path = "../runec_utils" }
runec_fluent_messages = { path = "../runec_fluent_messages" }
memchr = "2.7.6"