[package]
name = "runec_errors"
version = "0.0.0"
edition = "2024"

[dependencies]
fluent = { version = "0.17.0" }
indexmap = "2.12.1"
runec_source = { path = "../runec_source" }
runec_utils = { path = "../runec_utils" }
runec_fluent_messages = { path = "../runec_fluent_messages" }

[dev-dependencies]
runec_test_utils = { path = "../runec_test_utils" }
